# trad-ding

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  INDEX.md  Makefile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.claude/commands/: check-env.md  deploy.md  install.md  kill-project.md  new-migration.md  run-project.md
.github/workflows/: build-and-push.yml
.next/: trace  trace-build
app/: config.py  db.py  env.py  main.py  supabase.py
app/models/: asset.py  asset_model.py  asset_news.py
app/repositories/: asset_models.py  asset_news.py  assets.py
app/routers/: analysis.py  assets.py  news.py  prediction.py  root.py  training.py
app/services/: analysis.py  news.py  prediction.py  training.py
app/static/: index.html
app/train/: features.py  modal_app.py
app/types/: analysis.py  news.py
backend/: .env.example  .gitignore  Makefile  db.py  env.py  main.py  requirements-dev.txt  requirements.txt  supabase.py  vercel.json
backend/api/: index.py
backend/models/: asset_news.py
backend/repositories/: asset_models.py  asset_news.py  assets.py
backend/routers/: assets.py  news.py  prediction.py  root.py  training.py
backend/services/: analysis.py  news.py  (+2 more)
docs/: DEPLOYMENT.md  INDEX.md  LEARNINGS.md  architecture.md
migrations/: env.py
modal/: features.py  modal_app.py
web/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+96 files in other folders)
