[project]
name = "trad-ding"
version = "0.1.0"
requires-python = "~=3.12"

[tool.poetry.dependencies]
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
sqlmodel = "^0.0.37"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.2"
yfinance = "^1.2.0"
alembic = "^1.18.4"
pandas = "^3.0.1"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]